# coccoiMannuSDL

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/glad/: glad.c
res/models/: chick.dae
res/shaders/fragment/: crosshair.fs
res/shaders/vertex/: crosshair.vs  model.vs
